--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_menu_manage"
-            android:title="page one" />
+            android:title="page four" />
     </group>
 
     <item android:title="Social Media">
